--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,14 @@
     margin: 0;
     padding: 0;
     border: 0;
+    font-family: cursive;
+    box-sizing: border-box;
 }
 
 body {
-    box-sizing: border-box;
-    padding: 64px;
+    padding: 32px 64px 64px;
     width: 100vw;
     height: 100vh;
-    font-family: cursive;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,10 +21,10 @@ body {
 }
 
 #gameboard {
-    box-sizing: border-box;
     background-color: black;
     width: 50vh;
     height: 50vh;
+    border-radius: 4px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 1fr;
@@ -38,4 +38,63 @@ body {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+}
+
+.btn {
+    padding: 12px;
+    border-radius: 4px;
+    font-size: 24px;
+    font-family: cursive;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+#start-btn {
+    background-color: green;
+}
+
+#restart-btn {
+    background-color: red;
+}
+
+form {
+    background-color: yellowgreen;
+    width: 28vw;
+    padding: 12px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+form div {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+label {
+    flex: 1;
+}
+
+input {
+    flex: 4;
+    padding: 4px;
+    border-radius: 2px;
+}
+
+label, input {
+    font-size: 20px;
+}
+
+#form-and-btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
 }
